<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.courseraproject.mutibo.AddSetActivity" >
    
    <TextView
        android:id="@+id/addSetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/text_description_padding"
        android:text="@string/add_set_text" />

    <RadioGroup
        android:id="@+id/addMovieButtonsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:textColor="#000" >

    </RadioGroup>

    <AutoCompleteTextView
        android:id="@+id/movieSearchBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_set_search"
        android:ems="10" >

        <requestFocus />
    </AutoCompleteTextView>

    <EditText
        android:id="@+id/explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/add_set_hint" />

    <Button
        android:id="@+id/addSetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/add_set_submit"
        android:onClick="addSet" />

    <TextView
        android:id="@+id/addSetWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/text_description_padding"
        android:text="@string/add_set_warning" />

</LinearLayout>