<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal|center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.courseraproject.mutibo.StartScreenActivity$PlaceholderFragment" >

    <ImageButton
        android:id="@+id/playGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:onClick="startGame"
        android:src="@drawable/play_button"
        android:text="@string/main_play_game" />

    <TextView
        android:id="@+id/lastGameScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F0A3AD"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/highScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textColor="#F0A3AD"
        android:textAppearance="?android:attr/textAppearanceMedium" />

     <Button
        android:id="@+id/leaderboardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:text="@string/main_show_leaderboard" />
    
    <Button
        android:id="@+id/addSetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="addSet"
        android:text="@string/add_set_submit" />

    <Button
        android:id="@+id/logout"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_logout"
        android:onClick="logout" />

</LinearLayout>
